:earth_africa: style fix for covers

--- a/style/style.css
+++ b/style/style.css
@@ -102,5 +102,7 @@ img.flag {
 }
 
 .cover {
-  background-size: cover;
+  width: 50px;
+  margin: 0;
+  padding: 0;
 }
